--- a/.github/workflows/pipleine.yml
+++ b/.github/workflows/pipleine.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build_test:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout the code
       uses: actions/checkout@v4
@@ -20,4 +21,4 @@ jobs:
     - name: Install dependencies   
       run: npm install
     - name: Execute tests
-      run: npm test
+      run: npm run test
